Fixed glow behind swiper images

--- a/css/style.css
+++ b/css/style.css
@@ -397,7 +397,7 @@ li{
 }
 
 #home .swiper-container img{
-    box-shadow: 0px -10px 60px #c9d6da;
+    box-shadow: 0px 0px 40px #c9d6da;
  }
 /* IMAGE CONTAINER  */
 
